<b>2008-09-30</b>

* Flights over 2000 mi now drawn as great circle routes, one segment per 1000 mi
* "Stats" renamed as "Top 10"
* Flight list not shown after "Add"

<b>2008-09-28</b>

* Flight editing streamlined: prev/next buttons, list reloading, tracking of changes
* Fixed bug for viewing flights of open trips (/trip/x) when not logged in

<b>2008-09-26</b>

* Airline aliases now supported in DB (eg. Sibir Airlines -> S7 Airlines)
* Fixed duplicate-creating bug when import new airlines
* Corrupt accents fixed by updating PHP scripts to output Latin1 (2074180)

<b>2008-09-25</b>

* Trips can now be deleted

<b>2008-09-21</b>

* "Year" filter added
* Filter selections automatically restricted when a trip is chosen
* Clearing filter in /trip/X mode no longer resets trip
* Add "Delete" option for trips
* FlightMemory import strict date validation implemented
* FlightMemory import now handles distances in km correctly

<b>2008-09-20</b>

* FlightMemory importing implemented
* Rendering up to 100% faster by treating X-Y,Y-X flights as identical
* "Top 10 Routes" now considers X-Y same as Y-X
* Cleaner "News" dialog
* User's other trips no longer shown when viewing a single trip

<b>2008-09-17</b>

* Added Google ads and implemented stack for tracking panes
* Filters for what can be entered in new airports
* Added support for private airports (non-IATA, non-ICAO)
* Auto-fill airline, trip from filter (2115834)
* Tweaked DAFIF warnings (2115839)

<b>2008-09-14</b>

* Support for "private" (non-airline) flights added
* Airports, cities, IATA and ICAO codes capitalized when entering new airports
* Bugs in airport ICAO codes for stats fixed
* Airports now rendered busiest last (on top), with one extra size

<b>2008-09-13</b>

* Small bug in session handling fixed

<b>2008-09-12</b>

* Gamma release day!
